--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,3 +3,50 @@ h1 {
     font-size: 30px;
     color: red;
  }
+
+ nav ul {
+    display: flex;
+    flex-direction: column;
+  } 
+  
+  nav li {
+    list-style: none;
+    margin: 0.5em;
+    padding: 0;
+    font-size: 1.5em;  
+  }
+  
+  @media (min-width: 45em) {
+    nav ul {	
+      flex-direction: row;  
+    }
+    nav li {
+      font-size: 1em;
+    }  
+  }
+
+  nav a {
+    display: block;
+    padding: 0.4em;
+    text-decoration: none; 
+    font-weight: bold;
+    border: thin solid darkblue;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px white inset;
+    color: gold; 
+    background-color: darkblue; 
+    transition: all .25s ease-in;	  
+  }
+
+nav li[aria-current] a {
+  background-color: firebrick; 
+  color: gold;
+}
+  
+  nav a:focus,
+  nav a:hover,
+  nav li[aria-current] a:focus,
+  nav li[aria-current] a:hover {    
+    color: darkblue; 
+    background-color: gold;
+  }
